@@ -61,13 +61,13 @@
 #![warn(clippy::pedantic)]
 #![allow(clippy::use_self)]
 
-use std::{error::Error as StdError, fmt, result::Result as StdResult};
+use std::{error, fmt::{self, Display, Formatter}, string::ToString};
 
 mod macros;
 mod terminator;
 pub use terminator::Terminator;
 
-pub type Result<T> = StdResult<T, Error>;
+pub type Result<T> = std::result::Result<T, Error>;
 
 /// An error that is a human-targetted string plus an optional cause.
 #[derive(Debug)]
@@ -77,7 +77,7 @@ pub struct Error
 	pub ctx: String,
 
 	/// The optional cause of the error.
-	pub cause: Option<Box<dyn StdError + Send + 'static>>,
+	pub cause: Option<Box<dyn error::Error + Send + 'static>>,
 }
 
 impl Error
@@ -85,11 +85,11 @@ impl Error
 	/// Create a new error with the given cause.
 	pub fn new<S, E>(ctx: S, cause: E) -> Error
 	where
-		S: Into<String>,
-		E: StdError + Send + 'static,
+		S: ToString,
+		E: error::Error + Send + 'static,
 	{
-		let ctx = ctx.into();
-		let cause: Option<Box<dyn StdError + Send + 'static>> = Some(Box::new(cause));
+		let ctx = ctx.to_string();
+		let cause: Option<Box<dyn error::Error + Send + 'static>> = Some(Box::new(cause));
 
 		Error { ctx, cause }
 	}
@@ -98,33 +98,36 @@ impl Error
 	pub fn iter_causes(&self) -> Causes { iter_causes(self) }
 }
 
-impl fmt::Display for Error
+impl Display for Error
 {
-	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result { write!(f, "{}", self.ctx) }
+	fn fmt(&self, f: &mut Formatter) -> fmt::Result { write!(f, "{}", self.ctx) }
 }
 
-impl StdError for Error
+impl error::Error for Error
 {
 	fn description(&self) -> &str { &self.ctx }
 
-	fn source(&self) -> Option<&(dyn StdError + 'static)> { self.cause.as_ref().map(|c| &**c as _) }
+	fn source(&self) -> Option<&(dyn error::Error + 'static)>
+	{
+		self.cause.as_ref().map(|c| &**c as _)
+	}
 }
 
 /// An iterator over the causes of an error.
 pub struct Causes<'a>
 {
 	/// The next cause to display.
-	cause: Option<&'a (dyn StdError + 'static)>,
+	cause: Option<&'a (dyn error::Error + 'static)>,
 }
 
 impl<'a> Iterator for Causes<'a>
 {
-	type Item = &'a (dyn StdError + 'static);
+	type Item = &'a (dyn error::Error + 'static);
 
 	fn next(&mut self) -> Option<Self::Item>
 	{
 		let cause = self.cause.take();
-		self.cause = cause.and_then(StdError::source);
+		self.cause = cause.and_then(error::Error::source);
 
 		cause
 	}
@@ -134,23 +137,23 @@ impl<'a> Iterator for Causes<'a>
 pub trait ResultExt<T>
 {
 	/// Adds some context to the error.
-	fn context<S: Into<String>>(self, ctx: S) -> Result<T>;
+	fn context<S: ToString>(self, ctx: S) -> Result<T>;
 }
 
-impl<T, E> ResultExt<T> for StdResult<T, E>
+impl<T, E> ResultExt<T> for std::result::Result<T, E>
 where
-	E: StdError + Send + 'static,
+	E: error::Error + Send + 'static,
 {
-	fn context<S: Into<String>>(self, ctx: S) -> Result<T>
+	fn context<S: ToString>(self, ctx: S) -> Result<T>
 	{
-		self.map_err(|e| Error { ctx: ctx.into(), cause: Some(Box::new(e)) })
+		self.map_err(|e| Error { ctx: ctx.to_string(), cause: Some(Box::new(e)) })
 	}
 }
 
 /// Creates an error message from the provided string.
 #[inline]
-pub fn err_msg<S: Into<String>>(ctx: S) -> Error { Error { ctx: ctx.into(), cause: None } }
+pub fn err_msg<S: ToString>(ctx: S) -> Error { Error { ctx: ctx.to_string(), cause: None } }
 
 /// Returns an iterator over the causes of an error.
 #[inline]
-pub fn iter_causes<E: StdError + ?Sized>(e: &E) -> Causes { Causes { cause: e.source() } }
+pub fn iter_causes<E: error::Error + ?Sized>(e: &E) -> Causes { Causes { cause: e.source() } }
